# doxygen-parser

./: CHANGELOG.md  README.md  cabal.project  doxygen-parser.cabal
.github/actions/setup-doxygen/: action.yml
.github/workflows/: cabal-fmt.yml  haskell.yml  stylish-haskell.yml  windows.yml
src-internal/Doxygen/Parser/: Internal.hs  Types.hs
src/Doxygen/: Parser.hs
src/Doxygen/Parser/: Types.hs
test/: Main.hs
test/Test/Doxygen/Parser/: Block.hs  CodeBlock.hs  Comment.hs  Helpers.hs  InlineNesting.hs  InlineParsing.hs  List.hs  NormalizeWhitespace.hs  Param.hs  Properties.hs  SimpleSect.hs  StructuralWarnings.hs  Whitespace.hs  XMLFileResult.hs
